ingress/be-prod-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: api-ingress
  namespace: be-prod
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: api.xquare.app
    tls:
      secretName: be-prod-cert
    authorization:
      extensionRef:
        name: contour-middleware
        namespace: be-prod
    corsPolicy:
      allowCredentials: true
      allowOrigin: 
        - "https://service.xquare.app"
        - "https://admin.xquare.app"
      allowMethods:
        - "GET"
        - "POST"
        - "PUT"
        - "PATCH"
        - "DELETE"
        - "OPTIONS"
      allowHeaders:
        - "content-type"
        - "authorization"
        - "accept"
        - "accept-encoding"
        - "Refresh-Token"
      exposeHeaders:
        - "Access-Control-Allow-Credentials"
  includes:
    - name: application
      namespace: be-prod
    - name: attachment
      namespace: be-prod
    - name: authority
      namespace: be-stag
    - name: cloud-config
      namespace: be-prod
    - name: contour-middleware
      namespace: be-prod
    - name: feed
      namespace: be-prod
    - name: meal
      namespace: be-prod
    - name: pick
      namespace: be-prod
    - name: point
      namespace: be-prod
    - name: schedule
      namespace: be-prod
    - name: timetable
      namespace: be-prod
    - name: user
      namespace: be-prod
    - name: report
      namespace: be-prod
