ingress/be-stag-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: stag-api-ingress
  namespace: be-stag
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: stag-api.xquare.app
    tls:
      secretName: be-stag-cert
    authorization:
      extensionRef:
        name: contour-middleware
        namespace: contour-middleware
  includes:
    - name: dms
      namespace: be-stag
    - name: application
      namespace: be-stag
    - name: meal
      namespace: be-stag
    - name: notification
      namespace: be-stag
    - name: backoffice
      namespace: be-stag
    - name: user
      namespace: be-stag
    - name: authority
      namespace: be-stag
    - name: contour-middleware-test
      namespace: be-stag
